--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://ttu-csc.github.io/" # the base hostname & protocol for your site
 twitter_username: 
-github_username:  
+github_username:  TTU-CSC
 
 # Build settings
 markdown: kramdown
