--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 # Site settings
 title: TTU CSC Documentation
+name: TTU CSC Documentation
+tagline: Develop. Demonstrate. Educate.
 email: 
 description: > # this means to ignore newlines until "baseurl:"
   This page hosts the documentation for TTU's CSC 2101 class, with
